<resources>
    <string name="app_name">EMTestProject</string>
    <string name="desc_placeholder">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="price_placeholder">от %s ₽</string>
    <string name="book_price_placeholder">%s ₽</string>
    <string name="hotel_title">Отель</string>
    <string name="about_hotel_title">Об отеле</string>
    <string name="facilities_title">Удобства</string>
    <string name="about_hotel_placeholder">Самое необходимое</string>
    <string name="included_title">Что включено</string>
    <string name="exclude_title">Что не включено</string>
    <string name="select_room_button_text">К выбору номера</string>
    <string name="about_room_text">Подробнее о номере</string>
    <string name="rooms_select_button_text">Выбрать номер</string>
    <string name="book_title">Бронирование</string>
    <string name="book_data_placeholder">Стандартный с видом на бассейн или сад</string>
    <string name="privacy_text">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="tourist_info_title_placeholder">%s турист</string>
    <string name="about_client_title">Информация о покупателе</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="email_hint">Почта</string>
    <string name="name_hint">Имя</string>
    <string name="surname_hint">Фамилия</string>
    <string name="brith_date_hint">Дата рождения</string>
    <string name="citizenship_hint">Гражданство</string>
    <string name="passport_id_hint">Номер загранпаспорта</string>
    <string name="passport_end_date_hint">Срок действия загранпаспорта</string>
    <string name="pay_text_placeholder">Оплатить %s ₽</string>
    <string name="sum_title">К оплате</string>
    <string name="service_charge_title">Сервисный сбор</string>
    <string name="fuel_charge_title">Топливный сбор</string>
    <string name="tour_price_title">Тур</string>
    <string name="departure_title">Вылет из</string>
    <string name="arrival_title">Страна, город</string>
    <string name="dates_title">Даты</string>
    <string name="nights_title">Кол-во ночей</string>
    <string name="nights_placeholder">%s ночей</string>
    <string name="room_title">Номер</string>
    <string name="food_title">Питание</string>
    <string name="add_tourist_text">Добавить туриста</string>
    <string name="et_error_message">Необходимо заполнить данные</string>
    <string name="not_valid_data_error">Неправильные данные</string>
    <string name="paid_title">Заказ оплачен</string>
    <string name="paid_order_placeholder">Подтверждение заказа №%s может занять некоторое время (от 1 часа до суток).\nКак только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="paid_button_text">Супер!</string>
    <string name="order_in_work_text">Ваш заказ принят в работу</string>
</resources>