<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/roomsImageContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#c9c9c9"
            app:cardCornerRadius="15dp"
            app:layout_constraintDimensionRatio="H, 3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/roomsImageCarousel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:showBottomShadow="false"
                app:showCaption="false"
                app:showIndicator="true"

                app:showNavigationButtons="false"
                app:showTopShadow="false" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/roomsNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sf_medium"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomsImageContainer"
            tools:text="Стандартный с видом на бассейн или сад" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/roomsPeculiaritiesContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:flexWrap="wrap"
            app:justifyContent="flex_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomsNameTextView"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:background="#1A0D72FF"
            android:fontFamily="@font/sf_medium"
            android:textSize="16sp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawablePadding="2dp"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:text="@string/about_room_text"
            android:textColor="@color/location_text_color"
            app:drawableTint="@color/location_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomsPeculiaritiesContainer"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/roomsPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_semi_bold"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:text="@string/price_placeholder" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/roomsPriceAddTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_regular"
                android:textColor="@color/price_add_text_color"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck"
                tools:text="за 7 ночей с перелётом" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/roomsSelectButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="#0D72FF"
            android:fontFamily="@font/sf_medium"
            android:text="@string/rooms_select_button_text"
            android:textSize="16sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>